fix overflowing elements

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    flex: 2 1 65%;
+    flex: 2 0 65%;
 }
 
 .form-message {
@@ -106,6 +106,7 @@
     flex: 1 1 0;
     min-height: 13%;
     margin-bottom: 7%;
+    min-height: 0;
 }
 
 .set-one input:focus,
@@ -130,6 +131,7 @@
     justify-content: center;
     align-items: center;
     top: 20%;
+    overflow: hidden;
 }
 
 .logo img {
